# parallel-game-of-life

./: README.md
gol-mpi/: CMakeLists.txt  cyclic_vector.hpp  game_of_life.cpp  game_of_life.hpp  main.cpp
gol-pthread/: CMakeLists.txt  field.csv  game_of_life.cpp  game_of_life.hpp  main.cpp  multithreading_utils.cpp  multithreading_utils.hpp
